# iRoCS-Toolbox

./: AUTHORS  CMakeLists.txt  Doxyfile  Makefile.in  README  configure  configure.ac  iRoCS-ToolboxConfig.cmake.in  iRoCS-ToolboxConfigVersion.cmake.in
src/: CMakeLists.txt  Makefile.am  Makefile.in  config-cmake.hh.in  config.hh.in
src/L_T_C/: CMakeLists.txt  L_T_C.cc  L_T_C.qrc  Makefile.am  SelectDlg.cc  SelectDlg.hh  defaultParameters.hh  lblitzDataExplorer.hh  limagelabel.cc  limagelabel.hh  lviewer.cc  lviewer.hh  lviewermainwindow.cc  lviewermainwindow.hh  mainFrame.cc  mainFrame.hh
src/iRoCS_GUI/: BoolControlElement.cc  BoolControlElement.hh  CMakeLists.txt  ChannelControlWidget.cc  ChannelControlWidget.hh  ChannelOrthoviewRenderer.cc  ChannelOrthoviewRenderer.hh  ChannelTreeWidgetItem.cc  ChannelTreeWidgetItem.hh  ColorControlElement.cc  ColorControlElement.hh  ControlElement.cc  ControlElement.hh  Double3ControlElement.cc  Double3ControlElement.hh  Double4x4ControlElement.cc  Double4x4ControlElement.hh  DoubleControlElement.cc  DoubleControlElement.hh  DoubleRangeControlElement.cc  DoubleRangeControlElement.hh  DoubleSpinBoxDelegate.cc  DoubleSpinBoxDelegate.hh  FloatChannelControlWidget.cc  FloatChannelControlWidget.hh  FloatChannelOrthoviewRenderer.cc  FloatChannelOrthoviewRenderer.hh  FloatChannelTreeWidgetItem.cc  FloatChannelTreeWidgetItem.hh  FloatColormapBarWidget.cc  FloatColormapBarWidget.hh  FloatColormapEditorWidget.cc  FloatColormapEditorWidget.hh  HDF5SelectionDialog.cc  HDF5SelectionDialog.hh  IndexedColormapBarWidget.cc  IndexedColormapBarWidget.hh  IndexedColormapEditorWidget.cc  IndexedColormapEditorWidget.hh  LineEditDelegate.cc  (+25 more)
src/labelling/: CMakeLists.txt  Makefile.am  Makefile.in  labelling.cc
src/libArrayToolbox/: ATBBasicTree.hh  ATBCoupledBSplineModel.cc  ATBCoupledBSplineModel.hh  ATBCoupledBSplineModel.icc  ATBDataSynthesis.cc  ATBDataSynthesis.hh  ATBDataSynthesis.icc  ATBGSLWrapper.cc  ATBGSLWrapper.hh  ATBGSLWrapper.icc  ATBLinAlg.cc  ATBLinAlg.hh  ATBLinAlg.icc  ATBMorphology.hh  ATBMorphology.icc  ATBNucleus.cc  ATBNucleus.hh  ATBNucleus.icc  ATBPolyline.hh  ATBPolyline.icc  ATBPolynomial.hh  ATBPolynomial.icc  ATBSpline.cc  ATBSpline.hh  ATBSpline.icc  ATBThinPlateSpline.cc  ATBThinPlateSpline.hh  ATBThinPlateSpline.icc  ATBTiming.cc  ATBTiming.hh  AnisotropicDiffusionFilter.hh  AnisotropicDiffusionFilter.icc  Array.hh  Array.icc  BoundaryTreatment.hh  BoundaryTreatment.icc  CMakeLists.txt  CentralGradientFilter.hh  CentralGradientFilter.icc  CentralHessianFilter.hh  (+79 more)
src/libBaseFunctions/: BaseEnvironment.cc  BaseEnvironment.hh  BaseFile.cc  BaseFile.hh  CMakeLists.txt  Makefile.am  Makefile.in
src/libBlitz2DGraphics/: Blitz2DGraphics.hh  Blitz2Ddraw.hh  Blitz2Ddraw.icc  Blitz2Dgeometry.hh  Blitz2Dgeometry.icc  BlitzImageReader.cc  BlitzImageReader.hh  BlitzImageWriter.cc  BlitzImageWriter.hh  BlitzRGBColor.cc  BlitzRGBColor.hh  CMakeLists.txt  ColorConvert.cc  ColorConvert.hh  ImageAccessWrapper.cc  ImageAccessWrapper.hh  ImageTools.hh  ImageTools.icc  Makefile.am  Makefile.in  ProjectDesc.hh
src/libBlitzAnalyze/: BlitzAnalyzeError.hh  BlitzAnalyzeFile.cc  BlitzAnalyzeFile.hh  BlitzAnalyzeFile.icc  BlitzAnalyzeTraits.cc  BlitzAnalyzeTraits.hh  BlitzAnalyzeTraits.icc  BlitzAnalyzeType.hh  CMakeLists.txt  Makefile.am  Makefile.in
src/libBlitzFFTW/: BlitzFFTW-Impl.cc  BlitzFFTW-Impl.hh  BlitzFFTW.cc  BlitzFFTW.hh  BlitzFFTW.icc  BlitzFFTWError.hh  CMakeLists.txt  Makefile.am  Makefile.in  generate.cc
src/libBlitzHdf5/: BlitzH5Traits.cc  BlitzH5Traits.hh  BlitzHdf5Light.cc  BlitzHdf5Light.hh  BlitzHdf5Light.icc  CMakeLists.txt  FileIOWrapper.hh  FileIOWrapper.icc  Makefile.am  Makefile.in
src/libIRoCS/: AssignLayersToCellSegmentationWorker.cc  AssignLayersToCellSegmentationWorker.hh  AttachIRoCSSCTToCellSegmentationWorker.cc  AttachIRoCSSCTToCellSegmentationWorker.hh  AttachIRoCSToCellSegmentationParameters.cc  AttachIRoCSToCellSegmentationParameters.hh  AttachIRoCSToCellSegmentationWorker.cc  AttachIRoCSToCellSegmentationWorker.hh  AttachIRoCSWorker.cc  AttachIRoCSWorker.hh  CMakeLists.txt  ComputeCellFeaturesWorker.cc  ComputeCellFeaturesWorker.hh  DetectNucleiWorker.cc  DetectNucleiWorker.hh  DetectSpheresWorker.cc  DetectSpheresWorker.hh  EpidermisLabellingWorker.cc  EpidermisLabellingWorker.hh  LayerAssignmentWorker.cc  LayerAssignmentWorker.hh  Makefile.am  Makefile.in  MitosisClassificationParameters.cc  MitosisClassificationParameters.hh  MitosisClassificationWorker.cc  MitosisClassificationWorker.hh  RootSegmentationWorker.cc  RootSegmentationWorker.hh  TrainDetectorWorker.cc  TrainDetectorWorker.hh  TrainEpidermisLabellingWorker.cc  TrainEpidermisLabellingWorker.hh  TrainLayerAssignmentWorker.cc  TrainLayerAssignmentWorker.hh  TrainfileParameters.cc  TrainfileParameters.hh  TrainingParameters.cc  TrainingParameters.hh  iRoCSFeatures.cc  (+2 more)
src/libMultiChannelModel/: CMakeLists.txt  Channel.cc  Channel.hh  ChannelObserver.cc  ChannelObserver.hh  Flags.cc  Flags.hh  FloatChannel.cc  FloatChannel.hh  FloatColormap.cc  FloatColormap.hh  FloatColormapObserver.cc  FloatColormapObserver.hh  IndexedColormap.cc  IndexedColormap.hh  IndexedColormapObserver.cc  IndexedColormapObserver.hh  MultichannelModel.cc  MultichannelModel.hh  MultichannelModelObserver.cc  MultichannelModelObserver.hh  Observable.cc  Observable.hh
src/libProgressReporter/: CMakeLists.txt  Makefile.am  Makefile.in  ProgressReporter.cc  ProgressReporter.hh  ProgressReporterQt4.cc  ProgressReporterQt4.hh  ProgressReporterStream.cc  ProgressReporterStream.hh
src/libProgressReporter_qt4/: CMakeLists.txt  Makefile.am  Makefile.in  ProgressReporterQt4.cc  ProgressReporterQt4.hh
src/libProgressReporter_qt5/: CMakeLists.txt  Makefile.am  ProgressReporterQt5.cc  ProgressReporterQt5.hh
src/libcmdline/: ArgIter.hh  ArgvIter.hh  CMakeLists.txt  CmdArg.cc  CmdArg.hh  CmdArg.icc  CmdArgs.hh  CmdLine.cc  CmdLine.hh  CmdLine.icc  CmdLineError.cc  CmdLineError.hh  Compiler.cc  Compiler.hh  Compilers.hh  Errors.hh  (+3 more)
test/: CMakeLists.txt  Makefile.am  Makefile.in
(+1083 files in other folders)
